salti/src/ui/panes/snapshots/salti__ui__panes__consensus__tests__consensus_pane_generic_without_conservation.snap
---
source: salti/src/ui/consensus_pane.rs
assertion_line: 510
expression: "render_consensus_pane_text(&alignment, &metrics, Rect::new(0, 0, 100, 4))"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│ACDEACDEACDE                                                                   │
│Consensus Sequence│ACDEACDEACDE                                                                   │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
