salti/src/ui/panes/snapshots/salti__ui__panes__consensus__tests__consensus_pane_translated_loading.snap
---
source: salti/src/ui/consensus_pane.rs
assertion_line: 495
expression: "render_consensus_pane_text(&alignment, &loading_metrics,\nRect::new(0, 0, 100, 5))"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│No reference selected                                                          │
│Consensus Sequence│Calculating consensus...                                                       │
│Conservation:     │Calculating conservation...                                                    │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
