salti/src/ui/panes/snapshots/salti__ui__panes__consensus__tests__consensus_pane_translated_no_reference.snap
---
source: salti/src/ui/consensus_pane.rs
assertion_line: 487
expression: "render_consensus_pane_text(&alignment, &metrics, Rect::new(0, 0, 100, 5))"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│No reference selected                                                          │
│Consensus Sequence│ H  H  H  H  H  H                                                              │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
