salti/src/ui/panes/snapshots/salti__ui__panes__consensus__tests__translated_no_reference.snap
---
source: salti/src/ui/panes/consensus.rs
expression: "consensus_text(&[CAT, CAT], ViewState::toggle_translation_overlay)"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│No reference selected.                                                         │
│Consensus Sequence│ H  H  H  H  H  H                                                              │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
